cmake_minimum_required(VERSION 2.8) 

PROJECT(mlibc)
 
INCLUDE_DIRECTORIES(../include) 

AUX_SOURCE_DIRECTORY(. MLIBC)
AUX_SOURCE_DIRECTORY(process PROCESS)
AUX_SOURCE_DIRECTORY(debug DEBUG)
AUX_SOURCE_DIRECTORY(time TIME)
AUX_SOURCE_DIRECTORY(net NET)
AUX_SOURCE_DIRECTORY(file FILE)
AUX_SOURCE_DIRECTORY(sys SYS)
AUX_SOURCE_DIRECTORY(algorithm ALGORITHM)

ADD_LIBRARY (mlibc SHARED ${MLIBC} ${PROCESS} ${TIME} ${NET} ${FILE} ${SYS} ${ALGORITHM} ${DEBUG})
ADD_LIBRARY (mlibc_static STATIC ${MLIBC} ${PROCESS} ${TIME} ${NET} ${FILE} ${SYS} ${ALGORITHM} ${DEBUG})

# 指定静态库的输出名称
set_target_properties(mlibc_static PROPERTIES OUTPUT_NAME "mlibc")
