cmake_minimum_required(VERSION 2.8) 

PROJECT(mlibc)
 
INCLUDE_DIRECTORIES(../include) 

AUX_SOURCE_DIRECTORY(. MLIBC)
AUX_SOURCE_DIRECTORY(process MLIBC)
AUX_SOURCE_DIRECTORY(debug MLIBC)
AUX_SOURCE_DIRECTORY(time MLIBC)
AUX_SOURCE_DIRECTORY(net MLIBC)
AUX_SOURCE_DIRECTORY(file MLIBC)
AUX_SOURCE_DIRECTORY(sys MLIBC)
AUX_SOURCE_DIRECTORY(algorithm MLIBC)
AUX_SOURCE_DIRECTORY(util MLIBC)
AUX_SOURCE_DIRECTORY(struct MLIBC)
AUX_SOURCE_DIRECTORY(devices MLIBC)
AUX_SOURCE_DIRECTORY(worker MLIBC)

ADD_LIBRARY (mlibc SHARED ${MLIBC})
TARGET_LINK_LIBRARIES(mlibc pthread)

ADD_LIBRARY (mlibc_static STATIC ${MLIBC})
TARGET_LINK_LIBRARIES(mlibc_static pthread)

# 指定静态库的输出名称
set_target_properties(mlibc_static PROPERTIES OUTPUT_NAME "mlibc")
